--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Raft Light : Simple, easy to use stream computation library for C++.">
+    <title>Raft Light by jonathan-beard</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Raft Light</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Raft Light</h1>
+        <p class="header">Simple, easy to use stream computation library for C++.</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/jonathan-beard/RaftLight">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/jonathan-beard/RaftLight/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/jonathan-beard/RaftLight/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/jonathan-beard/RaftLight">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Raft Light</h1>
-          <h2 id="project_tagline">Simple, easy to use stream computation library for C++.</h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jonathan-beard">jonathan-beard</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/jonathan-beard/RaftLight/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jonathan-beard/RaftLight/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>
 <a name="welcome-to-the-raft-light-c-template-library" class="anchor" href="#welcome-to-the-raft-light-c-template-library"><span class="octicon octicon-link"></span></a>Welcome to the Raft Light C++ template library</h3>
 
@@ -71,19 +70,37 @@ the result.</p>
 <h3>
 <a name="genealogy" class="anchor" href="#genealogy"><span class="octicon octicon-link"></span></a>Genealogy</h3>
 
-<p>There have been several dozen streaming languages.  Most notable of which is probably StreaMIT</p>
-      </section>
-    </div>
+<p>There have been several dozen streaming languages.  Most notable of which is probably StreaMIT.  I've worked on the Auto-Pipe streaming runtime system (both versions 1 and 2) developed at Washington University.  This particular streaming library was developed as a faster way to get started with stream processing by enabling users to stick to a language with which they are already familiar (C++).</p>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Raft Light maintained by <a href="https://github.com/jonathan-beard">jonathan-beard</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+<h3>
+<a name="tutorial" class="anchor" href="#tutorial"><span class="octicon octicon-link"></span></a>Tutorial</h3>
+
+<p>The tutorial could be written two ways.  The first would be to enumerate all the possible functions and configurations.  The second would be to give an example and explain the example as it is presented.  We'll start with the example approach then move to a short directory of useful functions followed by some permutations on the previously mentioned example.</p>
+
+<p>First and foremost what is stream processing.  Essentially it is a compute paradigm that envisions perfectly safe, threaded programs (although we'll relax this a bit with locked shared objects, shown much later in the tutorial).  Stream programs themselves are decomposed into compute "kernels" which are connected by communications links called "streams."  As an extremely simple example, take a look at the figure below which has three compute "kernels" (A,B,C) connected by two "streams."</p>
+
+<p><img src="http://www.cse.wustl.edu/%7Ebeardj/queues.eps" alt="tandem queue"></p>
+
+<p>As a concrete example we have a "sum" application which generates a random stream of numbers from two separate threads, sums them in another and finally prints them in yet another thread.  Admittedly this is a bit wasteful in practice, however its a nice dirt simple example. </p>
+
+<pre><code>
+</code></pre>
+      </section>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-55176313-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 
   </body>
 </html>
