--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Simple, easy to use stream computation library for C++">
+    <meta name="keywords" content="C++,Stream Processing,Raft,RaftLight,Stream,Processing,Threaded,Parallel,Parallel Processing">
+    <meta name="author" content="Jonathan Beard">
 
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
