--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ is build you're basically set save for a few details, which will be laid out wit
 
 <p>To build the example application simply:</p>
 
-<pre><code>$ cd RaftLight/ExampleApplications
+<pre><code>$ cd RaftLight/ExampleApps
 $ make
 </code></pre>
 
