--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
         <h3>
 <a name="welcome-to-the-raft-light-c-template-library" class="anchor" href="#welcome-to-the-raft-light-c-template-library"><span class="octicon octicon-link"></span></a>Welcome to the Raft Light C++ template library</h3>
 
+<h3>
+<a name="current-status" class="anchor" href="#current-status"><span class="octicon octicon-link"></span></a>Current Status</h3>
+
+<p>The RaftLight library is currently an alpha release.  The API itself is stable, however the back end
+is subject to updates.  The release is subject to the Apache Version 2.0 license.</p>
+
+<h3>
+<a name="setup" class="anchor" href="#setup"><span class="octicon octicon-link"></span></a>Setup</h3>
+
 <p>To checkout the library do the following:</p>
 
 <pre><code>$ cd location_for_the_repo
