--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
       <section id="main_content">
         <h3>
 <a name="welcome-to-the-raft-light-c-template-library" class="anchor" href="#welcome-to-the-raft-light-c-template-library"><span class="octicon octicon-link"></span></a>Welcome to the Raft Light C++ template library</h3>
+<h3>
+  <a name="what" class="anchor" href="#what"><span class="octicon octicon-link"></span></a>What is it?
+</h3>
+
+<p>
+  RaftLight is a C++ template library version of the full Raft language.  It enables easy use of the stream
+  processing compute paradigm (see: <a href="http://en.wikipedia.org/wiki/Stream_processing">link</a>).  The
+  programmer can create safe, parallel programs without knowledge of threads or locks by composing compute 
+  kernels into a larger application connected by lock free queues.  It is completely self contained, the 
+  bulk of the code is compiled into a single static library, the rest is included within a single header file
+  to be included within an application.
+</p>
 
 <h3>
 <a name="current-status" class="anchor" href="#current-status"><span class="octicon octicon-link"></span></a>Current Status</h3>
