--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           <a href="https://github.com/jonathan-beard/RaftLight/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/jonathan-beard/RaftLight" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
+      
+        <section id="downloads">
+          <a href="#what" class="btn">Intro</a>
+          <a href="#setup" class="btn">Setup</a>
+          <a href="#tutorial" class="btn">Tutorial</a>
+        </section>
       </div>
     </header>
 
