--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <h1>Raft Light</h1>
         <h2>Simple, easy to use stream computation library for C++.</h2>
-
+        <center>
         <section id="downloads">
           <a href="https://github.com/jonathan-beard/RaftLight/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/jonathan-beard/RaftLight/tarball/master" class="btn">Download as .tar.gz</a>
@@ -30,6 +30,7 @@
           <a href="#setup" class="btn">Setup</a>
           <a href="#tutorial" class="btn">Tutorial</a>
         </section>
+        </center>
       </div>
     </header>
 
