--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <a name="current-status" class="anchor" href="#current-status"><span class="octicon octicon-link"></span></a>Current Status</h3>
 
 <p>The RaftLight library is currently an alpha release.  The API itself is stable, however the back end
-is subject to updates.  The release is subject to the Apache Version 2.0 license.</p>
+is subject to updates.  The release is subject to the Apache Version 2.0 license.  The current "master" branch has been built on Linux and OS X machines using gcc 4.8+, icc14.04 and clang 3.5+.  The OS X version of clang++ has issues with recognizing dependent template names, on OS X either use icc or buidl the latest version of clang or gcc from source.</p>
 
 <h3>
 <a name="setup" class="anchor" href="#setup"><span class="octicon octicon-link"></span></a>Setup</h3>
