--- a/index.html
+++ b/index.html
@@ -295,6 +295,10 @@ function has various forms as follows:</p>
       <span class="kt">kernel_pair_t</span> <span class="n">link</span><span class="p">(</span> <span class="n">Kernel</span> <span class="o">*</span><span class="n">a</span><span class="p">,</span> <span class="k">const</span> <span class="n">std</span><span class="o">::</span><span class="n">string</span> <span class="n">a_port</span><span class="p">,</span> 
                           <span class="n">Kernel</span> <span class="o">*</span><span class="n">b</span><span class="p">,</span> <span class="k">const</span> <span class="n">std</span><span class="o">::</span><span class="n">string</span> <span class="n">b_port</span> <span class="p">);</span>
 </pre></div>
+
+<p>
+  Calling link has the effect of connecting Kernel *a to Kernel *b through the specified port (or the only port if none is specified.  This creates a data flow graph of kernels and “streams” through which data passes.  Type checking is also done at this time between ports.  Types are considered compatible if they are the same or cast-able.  If types are cast-able then the smallest (narrowest) type of the two is chosen for the port allocation.  The types are cast transparently to the user.  At this point nothing has yet been allocated.  When the <em>exe()</em> function of Map is called, everything is put into motion.  The data flow graph stored within Map is analyzed for “unconnected” edges, which could indicate compute kernels which have connected incorrectly, this is in addition to the type checking already performed.  Each compute kernel is “mapped” to a thread or process for execution, the appropriate type of link is automatically allocated by the run-time, finally the scheduler begins executing the data flow graph.  In the final version two threads monitor the execution schedule and stream status ensuring streams are properly allocated.  Future versions will automatically increase or decrease the parallelism within the data-flow graph (dev version will get this first).  
+</p>
       </section>
     </div>
 
